[GStreamer][MediaStream] Minor logging and include fixes https://bugs.webkit.org/show_bug.cgi?id=249939

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp: The audio sample
handling and logging is now more coherent with the video frames handling code path.
* Source/WebCore/platform/mediastream/gstreamer/RealtimeMediaSourceCenterGStreamer.cpp: Remove
un-needed includes.

Canonical link: https://commits.webkit.org/258660@main